[package]
name = "mat-sciencepark"
version = "0.1.1"
edition = "2021"
description = "Visa dagens lunch på Mattias Mat-restaurangerna (Skövde) — med veckocache."
license = "MIT"
readme = "README.md"
authors = ["Herman Brunberg <herman.brunberg@mio.se>"]
repository = "https://github.com/uherman/mat-sciencepark"
homepage = "https://github.com/uherman/mat-sciencepark"
keywords = ["cli", "lunch", "skovde", "mat", "mattiasmat"]
categories = ["command-line-utilities"]

[[bin]]
name = "mat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
html-escape = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
